# software-architect-knowledge-graph

./: .env.example  .gitignore  LICENSE  Makefile  README.md  commitlint.config.cjs  docker-compose.yml  package.json  skills-lock.json
.agents/skills/neo4j-cypher-skill/: SKILL.md
.agents/skills/neo4j-cypher-skill/references/: advanced-patterns.md  apoc.md  indexes.md  performance.md
.agents/skills/neo4j-driver-python-skill/: SKILL.md
.agents/skills/neo4j-driver-python-skill/references/: async.md  data-types.md  performance.md  transactions.md
.agents/skills/neo4j-query-tuning-skill/references/: plan-operators.md  stats-and-monitoring.md
.agents/skills/neo4j-vector-index-skill/: README.md  SKILL.md
.agents/skills/neo4j-vector-index-skill/references/: hybrid-search.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/evals/cases/: architect_smoke.yml  echo_greets.yml  echo_smoke.yml  refactor_smoke.yml  reviewer_smoke.yml  tickets_smoke.yml
apps/api/src/architect/: config.py  main.py
apps/api/src/architect/agents/architect/: graph.py  schemas.py
apps/api/src/architect/agents/common/: checkpointer.py  llm.py  proposals.py  state.py  tools.py  tracing.py
apps/api/src/architect/agents/echo/: graph.py
apps/api/src/architect/agents/refactor/: analyses.py
apps/api/src/architect/agents/reviewer/: checks.py
apps/api/src/architect/agents/tickets/: graph.py
apps/api/src/architect/api/: agents.py  architect.py  decisions.py  graph.py  refactor.py  reviewer.py  sandbox.py  tickets.py
apps/api/src/architect/embeddings/: client.py  store.py
apps/api/src/architect/evals/: runner.py
apps/api/src/architect/graph/: client.py  schema.py
apps/api/src/architect/ingest/: __main__.py  pipeline.py  resolver.py  source_roots.py  types.py  walker.py  writer.py
apps/api/src/architect/ingest/parsers/: __init__.py  _common.py  python.py  typescript.py
apps/api/src/architect/migrations/: 0001_init.sql  0002_decision_log.sql  __init__.py
apps/api/src/architect/sandbox/: runner.py
apps/api/tests/: test_health.py
apps/api/tests/agents/: test_eval_loader.py  test_llm_budget_integration.py  test_llm_pricing.py  test_proposals.py  test_reviewer_checks.py  test_tools_schema.py
apps/api/tests/ingest/: test_parser_python.py  test_parser_typescript.py  test_resolver.py  test_source_roots.py  test_walker.py
apps/api/tests/sandbox/: test_sandbox_run.py  test_sandbox_validation.py
apps/web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
apps/web/src/: App.test.tsx  App.tsx  Layout.tsx  main.tsx
apps/web/src/lib/: api.test.ts  api.ts
apps/web/src/pages/: Architect.tsx  Decisions.tsx  Echo.tsx  Graph.tsx  Refactor.tsx  Reviewer.tsx  Status.tsx  Tickets.tsx
docs/: agent-contracts.md  architecture.md  demo.md  graph-schema.md
infra/postgres/: init.sql
