[project]
name = "architect"
version = "0.0.0"
description = "AI Autonomous Software Architect — API + agents"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "neo4j>=5.25.0",
  "psycopg[binary,pool]>=3.2.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  # Ingestion + embeddings (M1)
  "tree-sitter>=0.23.0",
  "tree-sitter-language-pack>=0.4.0",
  "openai>=1.50.0",
  "tiktoken>=0.8.0",
  "pgvector>=0.3.4",
  "pathspec>=0.12.1",
  "tqdm>=4.66.0",
  "typer>=0.12.0",
  # Agents (M2)
  "langgraph>=0.6.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.3.0",
  "anthropic>=0.40.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architect"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# typer CLI: function-call defaults are the idiomatic pattern.
"src/architect/ingest/__main__.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["architect"]

[[tool.mypy.overrides]]
module = [
  "pgvector.*",
  "tqdm.*",
  "pathspec.*",
  "tree_sitter_language_pack.*",
  "langgraph.*",
  "langchain_core.*",
  "langchain_anthropic.*",
  "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
